# internal/controller/http/v1/request/auth.go
@@ -4,3 +4,7 @@ type Auth struct {
 	Username string `json:"username" binding:"required" example:"Naruto"`
 	Password string `json:"password" binding:"required" example:"Uuk2019Tyu"`
 }
+
+type Refresh struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
